--- a/index.html
+++ b/index.html
@@ -5,138 +5,234 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>佳咊實業有限公司</title>
 
-<!-- Dimension 官方 CSS -->
+<!-- HTML5UP Dimension 原始 CSS -->
 <link rel="stylesheet" href="https://html5up.net/uploads/demos/dimension/assets/css/main.css" />
+<!-- Font Awesome for diamond icon -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 
 <style>
-/* 全站背景覆蓋 */
+/* --- 全站背景覆蓋 --- */
 body {
   background: url("https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/neom-SUIMrEKVOXc-unsplash.jpg") no-repeat center center fixed;
   background-size: cover;
+  margin: 0;
+  font-family: 'Arial', sans-serif;
+  color: #fff;
+  overflow-x: hidden;
 }
 
-/* 導覽列文字白色 */
+/* --- Header 調整 --- */
+header {
+  position: relative;
+  text-align: center;
+  padding: 50px 0 0 0;
+}
+
+/* 圓形 + 鑽石 icon */
+.logo-circle {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background: rgba(255,255,255,0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto 20px auto;
+}
+
+.logo-circle .icon-gem {
+  color: #fff;
+  font-size: 32px;
+}
+
+/* Header 文字 */
+header .content .inner h1 {
+  font-size: 48px;
+  margin: 0;
+}
+
+header .content .inner p {
+  font-size: 26px;
+  margin-top: 10px;
+}
+
+/* --- 導覽列 (T字置中) --- */
+nav {
+  margin: 30px auto 0 auto;
+  width: 50%; /* 占螢幕一半 */
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+nav ul li {
+}
+
 nav ul li a {
-    color: #ffffff !important;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  font-size: 18px;
+  padding: 10px 0;
+  display: block;
+  text-align: center;
 }
 
-/* 玻璃彈窗 */
+nav ul li a:hover {
+  text-shadow: 0 0 5px rgba(255,255,255,0.7);
+}
+
+/* --- 玻璃彈窗 --- */
+#overlay {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.5);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.4s ease;
+  z-index: 999;
+}
+
+#overlay.active {
+  opacity: 1;
+  pointer-events: auto;
+}
+
 .modal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    width: 60%;
-    max-width: 600px;
-    transform: translate(-50%, -50%);
-    background: rgba(255,255,255,0.12);
-    backdrop-filter: blur(12px);
-    padding: 30px;
-    border-radius: 16px;
-    text-align: center;
-    z-index: 9999;
-    display: none;
-    overflow: hidden;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 60%;
+  transform: translate(-50%, -50%);
+  background: rgba(40,40,40,0.85);
+  backdrop-filter: blur(12px);
+  padding: 40px;
+  border-radius: 16px;
+  text-align: center;
+  z-index: 1000;
+  display: none;
 }
 
 .modal-header {
-    font-size: 28px;
-    margin-bottom: 20px;
-    color: #fff;
+  font-size: 28px;
+  margin-bottom: 20px;
+  color: #fff;
 }
 
 .modal-image img {
-    width: 80%;     /* 圖片占彈窗 80% */
-    height: auto;
-    border-radius: 10px;
-    margin-bottom: 20px;
+  width: 80%;
+  max-height: 40vh;
+  object-fit: contain;
+  border-radius: 10px;
+  margin-bottom: 20px;
 }
 
 .modal-content {
-    font-size: 16px;
-    color: #fff;
-    line-height: 1.6;
+  font-size: 16px;
+  color: #fff;
+  line-height: 1.6;
 }
 
 .close-btn {
-    margin-top: 20px;
-    padding: 10px 25px;
-    font-size: 16px;
-    border-radius: 10px;
-    border: 2px solid rgba(255,255,255,0.5);
-    background: rgba(255,255,255,0.15);
-    color: #fff;
-    cursor: pointer;
+  margin-top: 20px;
+  padding: 10px 25px;
+  font-size: 16px;
+  border-radius: 10px;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.15);
+  color: #fff;
+  cursor: pointer;
 }
+
 .close-btn:hover {
-    background: rgba(255,255,255,0.3);
+  background: rgba(255, 255, 255, 0.3);
 }
 </style>
 </head>
-
 <body>
 
-<!-- Header (保持 Dimension T 字結構) -->
-<header id="header">
-    <div class="logo"><span class="icon fa-gem"></span></div>
-    <div class="content">
-        <div class="inner">
-            <h1>佳咊實業有限公司</h1>
-            <p>高品質色粉供應商</p>
-        </div>
+<header>
+  <div class="logo-circle">
+    <i class="fa-solid fa-gem icon-gem"></i>
+  </div>
+  <div class="content">
+    <div class="inner">
+      <h1>佳咊實業有限公司</h1>
+      <p>高品質色粉供應商</p>
     </div>
-    <!-- 導覽列 -->
-    <nav>
-        <ul>
-            <li><a href="#" onclick="openModal('intro')">Intro</a></li>
-            <li><a href="#" onclick="openModal('work')">Work</a></li>
-            <li><a href="#" onclick="openModal('about')">About</a></li>
-            <li><a href="#" onclick="openModal('contact')">Contact</a></li>
-        </ul>
-    </nav>
+  </div>
+
+  <!-- T字導覽列 -->
+  <nav>
+    <ul>
+      <li><a href="#" onclick="openModal('intro')">關於佳咊</a></li>
+      <li><a href="#" onclick="openModal('work')">服務內容</a></li>
+      <li><a href="#" onclick="openModal('about')">產品介紹</a></li>
+      <li><a href="#" onclick="openModal('contact')">聯絡我們</a></li>
+    </ul>
+  </nav>
 </header>
 
-<!-- 彈窗 -->
+<!-- Overlay -->
+<div id="overlay"></div>
+
+<!-- 玻璃彈窗 -->
 <div class="modal" id="modalBox">
-    <div class="modal-header" id="modalTitle">標題</div>
-    <div class="modal-image"><img id="modalImage" src=""></div>
-    <div class="modal-content" id="modalContent">內容文字</div>
-    <button class="close-btn" onclick="closeModal()">關閉</button>
+  <div class="modal-header" id="modalTitle">標題</div>
+  <div class="modal-image"><img id="modalImage" src=""></div>
+  <div class="modal-content" id="modalContent">內容文字</div>
+  <button class="close-btn" onclick="closeModal()">關閉</button>
 </div>
 
 <script>
 const modalData = {
-    intro: {
-        title: '關於佳咊',
-        img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/about.jpg',
-        content: '佳咊實業成立於 1990 年，專注於色粉、顏料與色彩應用開發。我們致力於提供穩定品質、創新配方與客製化服務。'
-    },
-    work: {
-        title: '服務內容',
-        img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/majid-abparvar-work.jpg',
-        content: '・塑膠色粉調色<br>・Pantone 色號比對服務<br>・客製化顏色研發<br>・技術諮詢與色彩管理'
-    },
-    about: {
-        title: '產品介紹',
-        img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/products.jpg',
-        content: '・PE 色母<br>・PP 色母<br>・透明色粉<br>・金屬色粉<br>・特殊效果顏料（珠光、螢光、金蔥）'
-    },
-    contact: {
-        title: '聯絡我們',
-        img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/contact.jpg',
-        content: '佳咊實業有限公司<br>📍 台南市永康區中正南路309號<br>☎ 06-2536526<br>📧 service@chiahe.com.tw'
-    }
+  intro: {
+    title: '關於佳咊',
+    img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/about.jpg',
+    content: '佳咊實業成立於 1990 年，專注於色粉、顏料與色彩應用開發。我們致力於提供穩定品質、創新配方與客製化服務。'
+  },
+  work: {
+    title: '服務內容',
+    img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/majid-abparvar-work.jpg',
+    content: '・塑膠色粉調色<br>・Pantone 色號比對服務<br>・客製化顏色研發<br>・技術諮詢與色彩管理'
+  },
+  about: {
+    title: '產品介紹',
+    img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/products.jpg',
+    content: '・PE 色母<br>・PP 色母<br>・透明色粉<br>・金屬色粉<br>・特殊效果顏料（珠光、螢光、金蔥）'
+  },
+  contact: {
+    title: '聯絡我們',
+    img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/contact.jpg',
+    content: `佳咊實業有限公司<br>
+📍 台南市永康區中正南路309號<br>
+☎ 06-2536526<br>
+📧 service@chiahe.com.tw`
+  }
 };
 
-function openModal(key){
-    document.getElementById('modalTitle').innerHTML = modalData[key].title;
-    document.getElementById('modalImage').src = modalData[key].img;
-    document.getElementById('modalContent').innerHTML = modalData[key].content;
-    document.getElementById('modalBox').style.display = 'block';
+function openModal(key) {
+  document.getElementById('modalTitle').innerHTML = modalData[key].title;
+  document.getElementById('modalImage').src = modalData[key].img;
+  document.getElementById('modalContent').innerHTML = modalData[key].content;
+
+  document.getElementById('modalBox').style.display = 'block';
+  document.getElementById('overlay').classList.add('active');
 }
 
-function closeModal(){
-    document.getElementById('modalBox').style.display = 'none';
+function closeModal() {
+  document.getElementById('modalBox').style.display = 'none';
+  document.getElementById('overlay').classList.remove('active');
 }
+
+// 點擊 overlay 也可關閉
+document.getElementById('overlay').addEventListener('click', closeModal);
 </script>
 
 </body>
