--- a/index.html
+++ b/index.html
@@ -120,12 +120,13 @@ nav ul li a:hover {
 <body>
 
 <header id="header">
-  <!-- 圓形 logo -->
+  <!-- 圓形 logo 與鑽石直接相連 -->
   <div class="logo"><span class="icon fa-gem"></span></div>
+
   <div class="content">
     <div class="inner">
       <h1>佳咊實業有限公司</h1>
-      <p>你的顏色 獨一無二</p>
+      <p>你的色彩 獨一無二</p>
     </div>
   </div>
 
@@ -138,7 +139,71 @@ nav ul li a:hover {
       <li><a href="#" onclick="openModal('contact')">聯絡我們</a></li>
     </ul>
   </nav>
+
+  <!-- 下方四格按鈕 -->
+  <div class="bottom-buttons">
+    <div class="btn">Intro</div>
+    <div class="btn">Work</div>
+    <div class="btn">About</div>
+    <div class="btn">Contact</div>
+  </div>
 </header>
+
+<style>
+/* --- 圓形 logo 與鑽石 --- */
+.logo {
+  width: 120px; height: 120px;
+  border-radius: 50%;
+  background: rgba(255,255,255,0.1);
+  display: flex; justify-content: center; align-items: center;
+  border: 2px solid #fff;
+  margin: 0 auto; /* 置中 */
+  margin-bottom: 0; /* 取消底部間距，和導覽列相連 */
+}
+
+/* --- T 字導覽列 --- */
+nav {
+  display: flex;
+  justify-content: center;
+  margin-top: 0;
+}
+
+nav ul {
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+}
+
+nav ul li a {
+  color: #fff !important;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+/* --- 下方四格按鈕 --- */
+.bottom-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 0;
+  margin-top: 0; 
+}
+
+.bottom-buttons .btn {
+  flex: 1;                 /* 平均分配寬度 */
+  max-width: 150px;        /* 可視需要限制最大寬度 */
+  text-align: center;      /* 文字置中 */
+  padding: 10px 0;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  background: rgba(255,255,255,0.05);
+  border: 1px solid rgba(255,255,255,0.1);
+}
+
+.bottom-buttons .btn:hover {
+  background: rgba(255,255,255,0.2);
+}
+</style>
 
 <!-- 玻璃彈窗 -->
 <div class="modal" id="modalBox">
