--- a/index.html
+++ b/index.html
@@ -9,61 +9,131 @@
 <link rel="stylesheet" href="https://html5up.net/uploads/demos/dimension/assets/css/main.css" />
 
 <style>
-/* 全站背景覆蓋 */
+/* 全站背景 */
 body {
   background: url("https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/neom-SUIMrEKVOXc-unsplash.jpg") no-repeat center center fixed;
   background-size: cover;
+  margin: 0;
+  font-family: 'Arial', sans-serif;
+  opacity: 0;
+  animation: fadeIn 1.5s forwards;
 }
 
-/* Header 調整，T 字置中放大 */
+/* 背景淡入動畫 */
+@keyframes fadeIn {
+  to { opacity: 1; }
+}
+
+/* Header */
 #header {
-  min-height: auto;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
   align-items: center;
-  padding-top: 100px; /* 整體往下移 */
-  z-index: 2;
+  padding-top: 80px;
+  z-index: 10;
+  opacity: 0;
+  animation: headerFadeIn 1.5s 0.5s forwards;
 }
 
-/* logo 圓形 + 鑽石 */
-.logo {
-  width: 120px; height: 120px; /* 放大圓形 */
+/* Header 淡入 */
+@keyframes headerFadeIn {
+  to { opacity: 1; }
+}
+
+/* 圓形鑽石 */
+.logo-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 0;
+  opacity: 0;
+  animation: logoFadeIn 1s 0.7s forwards;
+}
+.logo-circle {
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   background: rgba(255,255,255,0.1);
-  display: flex; justify-content: center; align-items: center;
-  margin-bottom: 20px;
   border: 2px solid #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-.logo .icon {
-  font-size: 40px; /* 鑽石大小 */
+.logo-circle .icon {
+  font-size: 40px;
   color: #fff;
 }
 
-/* 導覽列置中 */
+/* 標題 */
+header .content .inner {
+  text-align: center;
+  margin: 20px 0;
+  opacity: 0;
+  animation: titleFadeIn 1s 1s forwards;
+}
+header .content .inner h1 {
+  color: #fff;
+  font-size: 48px;
+  margin: 0;
+}
+header .content .inner p {
+  color: #fff;
+  font-size: 24px;
+  margin-top: 10px;
+}
+
+/* T 字導覽列 */
 nav {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
+  width: 60%;
+  margin: 0 auto;
+  opacity: 0;
+  animation: navFadeIn 1s 1.2s forwards;
 }
-
-nav ul {
+nav ul.t-nav {
   display: flex;
-  justify-content: center;
-  gap: 60px; /* 每個按鈕間距 */
+  justify-content: space-between;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
-
-nav ul li a {
-  color: #fff !important; /* 永遠白字 */
+nav ul.t-nav li {
+  flex: 1;
+  text-align: center;
+}
+nav ul.t-nav li a {
+  color: #fff !important;
   text-decoration: none;
   font-weight: bold;
-  font-size: 18px; /* 放大文字 */
+  font-size: 18px;
+  padding: 10px 0;
+  display: block;
   transition: 0.3s;
 }
-
-nav ul li a:hover {
+nav ul.t-nav li a:hover {
   text-shadow: 0 0 5px rgba(255,255,255,0.7);
+}
+
+/* 下方四格按鈕 */
+.bottom-buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 60%;
+  margin-top: 20px;
+  opacity: 0;
+  animation: bottomFadeIn 1s 1.4s forwards;
+}
+.bottom-buttons .btn {
+  flex: 1;
+  text-align: center;
+  padding: 10px 0;
+  font-weight: bold;
+  color: #fff;
+  cursor: pointer;
+  background: rgba(255,255,255,0.05);
+  border: 1px solid rgba(255,255,255,0.1);
+  transition: 0.3s;
+}
+.bottom-buttons .btn:hover {
+  background: rgba(255,255,255,0.2);
 }
 
 /* 玻璃彈窗 */
@@ -71,7 +141,7 @@ nav ul li a:hover {
   position: fixed;
   top: 50%;
   left: 50%;
-  width: 60%; /* 彈窗寬度 */
+  width: 60%;
   transform: translate(-50%, -50%);
   background: rgba(255,255,255,0.12);
   backdrop-filter: blur(12px);
@@ -80,27 +150,29 @@ nav ul li a:hover {
   text-align: center;
   z-index: 9999;
   display: none;
+  opacity: 0;
+  transition: opacity 0.5s;
 }
-
+.modal.show {
+  display: block;
+  opacity: 1;
+}
 .modal-header {
   font-size: 28px;
   margin-bottom: 20px;
   color: #fff;
 }
-
 .modal-image img {
-  width: 80%; /* 圖片占彈窗 80% */
+  width: 80%;
   height: auto;
   border-radius: 10px;
   margin-bottom: 20px;
 }
-
 .modal-content {
   font-size: 18px;
   color: #fff;
   line-height: 1.6;
 }
-
 .close-btn {
   margin-top: 20px;
   padding: 10px 25px;
@@ -111,14 +183,20 @@ nav ul li a:hover {
   color: #fff;
   cursor: pointer;
 }
-
 .close-btn:hover {
   background: rgba(255,255,255,0.3);
 }
+
+/* Animations */
+@keyframes logoFadeIn { to { opacity: 1; } }
+@keyframes titleFadeIn { to { opacity: 1; } }
+@keyframes navFadeIn { to { opacity: 1; } }
+@keyframes bottomFadeIn { to { opacity: 1; } }
+
 </style>
 </head>
-<body>
 
+<body>
 <header id="header">
   <!-- 圓形鑽石 logo -->
   <div class="logo-wrapper">
@@ -144,140 +222,15 @@ nav ul li a:hover {
       <li><a href="#" onclick="openModal('contact')">聯絡我們</a></li>
     </ul>
   </nav>
+
+  <!-- 下方四格按鈕 -->
+  <div class="bottom-buttons">
+    <div class="btn" onclick="openModal('intro')">Intro</div>
+    <div class="btn" onclick="openModal('work')">Work</div>
+    <div class="btn" onclick="openModal('about')">About</div>
+    <div class="btn" onclick="openModal('contact')">Contact</div>
+  </div>
 </header>
-
-<style>
-/* header 基本 */
-#header {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 40px;
-  z-index: 10;
-}
-
-/* 圓形鑽石 */
-.logo-wrapper {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px; /* 與 T 字間距 */
-}
-.logo-circle {
-  width: 80px; height: 80px;
-  border-radius: 50%;
-  border: 2px solid #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: rgba(255,255,255,0.05);
-}
-.logo-circle .icon {
-  font-size: 36px;
-  color: #fff;
-}
-
-/* 標題 */
-header .content .inner {
-  text-align: center;
-  margin-bottom: 30px;
-}
-header .content .inner h1 {
-  color: #fff;
-  font-size: 48px;
-  margin: 0;
-}
-header .content .inner p {
-  color: #fff;
-  font-size: 24px;
-  margin-top: 10px;
-}
-
-/* T 字導覽列 */
-nav {
-  width: 50%; /* 控制 T 字寬度 */
-  margin: 0 auto;
-}
-nav ul.t-nav {
-  display: flex;
-  justify-content: space-between; /* 等分四格 */
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-nav ul.t-nav li {
-  flex: 1;
-  text-align: center; /* 文字置中 */
-}
-nav ul.t-nav li a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-  padding: 10px 0;
-  display: block;
-  transition: 0.3s;
-}
-nav ul.t-nav li a:hover {
-  text-shadow: 0 0 5px rgba(255,255,255,0.7);
-}
-</style>
-
-
-<style>
-/* --- 圓形 logo 與鑽石 --- */
-.logo {
-  width: 120px; height: 120px;
-  border-radius: 50%;
-  background: rgba(255,255,255,0.1);
-  display: flex; justify-content: center; align-items: center;
-  border: 2px solid #fff;
-  margin: 0 auto; /* 置中 */
-  margin-bottom: 0; /* 取消底部間距，和導覽列相連 */
-}
-
-/* --- T 字導覽列 --- */
-nav {
-  display: flex;
-  justify-content: center;
-  margin-top: 0;
-}
-
-nav ul {
-  display: flex;
-  justify-content: center;
-  gap: 60px;
-}
-
-nav ul li a {
-  color: #fff !important;
-  font-weight: bold;
-  font-size: 18px;
-}
-
-/* --- 下方四格按鈕 --- */
-.bottom-buttons {
-  display: flex;
-  justify-content: center;
-  gap: 0;
-  margin-top: 0; 
-}
-
-.bottom-buttons .btn {
-  flex: 1;                 /* 平均分配寬度 */
-  max-width: 150px;        /* 可視需要限制最大寬度 */
-  text-align: center;      /* 文字置中 */
-  padding: 10px 0;
-  color: #fff;
-  cursor: pointer;
-  font-weight: bold;
-  background: rgba(255,255,255,0.05);
-  border: 1px solid rgba(255,255,255,0.1);
-}
-
-.bottom-buttons .btn:hover {
-  background: rgba(255,255,255,0.2);
-}
-</style>
 
 <!-- 玻璃彈窗 -->
 <div class="modal" id="modalBox">
@@ -313,14 +266,16 @@ const modalData = {
 };
 
 function openModal(key) {
+  const modal = document.getElementById('modalBox');
   document.getElementById('modalTitle').innerHTML = modalData[key].title;
   document.getElementById('modalImage').src = modalData[key].img;
   document.getElementById('modalContent').innerHTML = modalData[key].content;
-  document.getElementById('modalBox').style.display = 'block';
+  modal.classList.add('show');
 }
 
 function closeModal() {
-  document.getElementById('modalBox').style.display = 'none';
+  const modal = document.getElementById('modalBox');
+  modal.classList.remove('show');
 }
 </script>
 
