--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@ body {
 }
 
 /* 背景淡入動畫 */
-@keyframes fadeIn {
-  to { opacity: 1; }
-}
+@keyframes fadeIn { to { opacity: 1; } }
 
 /* Header */
 #header {
@@ -36,9 +34,7 @@ body {
 }
 
 /* Header 淡入 */
-@keyframes headerFadeIn {
-  to { opacity: 1; }
-}
+@keyframes headerFadeIn { to { opacity: 1; } }
 
 /* 圓形鑽石 */
 .logo-wrapper {
@@ -52,7 +48,7 @@ body {
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  background: rgba(0,0,0,0.3); /* 深色帶透明 */
+  background: rgba(0,0,0,0.3);
   border: 2px solid #fff;
   display: flex;
   justify-content: center;
@@ -118,20 +114,21 @@ nav ul.t-nav li a:hover {
   top: 50%;
   left: 50%;
   width: 60%;
-  transform: translate(-50%, -50%);
-  background: rgba(0,0,0,0.8); /* 深色透明度 */
+  transform: translate(-50%, -50%) scale(0.9);
+  background: rgba(0,0,0,0.8);
   backdrop-filter: blur(12px);
   padding: 40px;
   border-radius: 16px;
   text-align: center;
   z-index: 9999;
-  display: none;
   opacity: 0;
-  transition: opacity 0.5s;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  display: none;
 }
 .modal.show {
   display: block;
   opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
 }
 .modal-header {
   font-size: 28px;
@@ -161,6 +158,23 @@ nav ul.t-nav li a:hover {
 }
 .close-btn:hover {
   background: rgba(255,255,255,0.3);
+}
+
+/* 新增：背景霧化遮罩 */
+#overlay {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.3);
+  backdrop-filter: blur(5px);
+  z-index: 998;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  display: none;
+}
+#overlay.show {
+  display: block;
+  opacity: 1;
 }
 
 /* Animations */
@@ -198,6 +212,9 @@ nav ul.t-nav li a:hover {
   </nav>
 </header>
 
+<!-- 新增：背景霧化遮罩 -->
+<div id="overlay"></div>
+
 <!-- 玻璃彈窗 -->
 <div class="modal" id="modalBox">
   <div class="modal-header" id="modalTitle">標題</div>
@@ -231,33 +248,44 @@ const modalData = {
   }
 };
 
-/* 打開彈窗 + 滑動到中心 */
+/* 打開彈窗 + 背景霧化淡入動畫 */
 function openModal(key) {
   const modal = document.getElementById('modalBox');
+  const overlay = document.getElementById('overlay');
+
   document.getElementById('modalTitle').innerHTML = modalData[key].title;
   document.getElementById('modalImage').src = modalData[key].img;
   document.getElementById('modalContent').innerHTML = modalData[key].content;
 
-  // 先平滑滾動到彈窗位置（頁面中間）
-  const scrollTo = window.innerHeight / 2;
-  window.scrollTo({
-    top: scrollTo,
-    behavior: 'smooth'
-  });
+  // 顯示遮罩
+  overlay.classList.remove('hidden');
+  overlay.style.display = 'block';
+  requestAnimationFrame(() => overlay.classList.add('show'));
 
-  // 延遲 300ms 再顯示彈窗，產生淡入效果
-  setTimeout(() => {
-    modal.classList.add('show');
-  }, 300);
+  // 顯示彈窗
+  modal.classList.remove('hidden');
+  modal.style.display = 'block';
+  requestAnimationFrame(() => modal.classList.add('show'));
 }
 
-/* 關閉彈窗 */
+/* 關閉彈窗 + 背景霧化淡出動畫 */
 function closeModal() {
   const modal = document.getElementById('modalBox');
-  modal.classList.remove('show');
-}
-</script>
+  const overlay = document.getElementById('overlay');
 
+  modal.classList.remove('show');
+  overlay.classList.remove('show');
+
+  // 動畫完成後隱藏元素
+  setTimeout(() => {
+    modal.style.display = 'none';
+    overlay.style.display = 'none';
+  }, 300); // 與 CSS transition 時間一致
+}
+
+// 點遮罩也能關閉
+document.getElementById('overlay').onclick = closeModal;
+</script>
 
 </body>
 </html>
