--- a/index.html
+++ b/index.html
@@ -54,9 +54,13 @@ body {
   justify-content: center;
   align-items: center;
 }
-.logo-circle .icon {
-  font-size: 40px;
-  color: #fff;
+/* 菱形本體 */
+.diamond-shape {
+  width: 50px;
+  height: 50px;
+  border: 3px solid #fff;
+  transform: rotate(45deg);
+  background: transparent;
 }
 
 /* 標題 */
