--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ nav ul.t-nav li a:hover {
   <!-- 圓形鑽石 logo -->
   <div class="logo-wrapper">
     <div class="logo-circle">
-      <span class="icon fa-gem"></span>
+        <div class="diamond-shape"></div>
     </div>
   </div>
 
