--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ nav ul.t-nav li a:hover {
 }
 .modal-image img {
   width: 80%;
-  height: auto;
+  height: 50%;
   border-radius: 10px;
   margin-bottom: 20px;
 }
